force-app/main/default/objects/Lead/fields/Data_de_nascimento__c.field-meta.xml
<CustomField>
    <fullName>Data_de_nascimento__c</fullName>
    <label>Data de nascimento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>