force-app/main/default/objects/Lead/fields/Sexo__c.field-meta.xml
<CustomField>
    <fullName>Sexo__c</fullName>
    <label>Sexo</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Feminino</fullName>
            </value>
            <value>
                <fullName>Masculino</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>